--- a/templates/addition.html
+++ b/templates/addition.html
@@ -3,8 +3,8 @@
 <div id="addition">
 <form method="post" action="/todo/v1_v01/tasks/add">
 
-    {{form.task.label}} {{form.task(id='Task')}}<br />
-    {{form.description.label}} {{form.description(id='description')}}
+    {{form.task.label}}<br /> {{form.task(id='Task')}}<br /><br />
+    {{form.description.label}}<br /> {{form.description(id='description')}}<br />
     {{form.submit}}
 </form>
 </div>
