--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "bootstrap/base.html" %}
-{% block title %}Flasky{% endblock %}
+{% block title %}ToDo-App{% endblock %}
 {% block navbar %}
+
 <div class="navbar navbar-inverse" role="navigation">
 <div class="container">
 <div class="navbar-header">
@@ -27,9 +28,10 @@ data-toggle="collapse" data-target=".navbar-collapse">
 </div>
 </div>
 </div>
-
+<style> h1 {margin-left:20px; }</style>
+<p>
 <h1>Todo App</h1>
-
+</p>
 {% endblock %}
 
 
