--- a/templates/updation.html
+++ b/templates/updation.html
@@ -1,12 +1,27 @@
 {% include "index.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>My-App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" type="text/css" media="screen" href="{{ url_for('static', filename='style.css')}}" />
+
+
+</head>
+
+<div id="update">
 <form method="post" action="/todo/v1_v01/tasks/update">
 
-    <p>{{form.task.label}} {{form.task(id='old Title')}}</p>
-    <p>{{form.task2.label}} {{form.task2(id='new Title')}}</p>
-    <p>{{form.description2.label}} {{form.description2(id='New description')}}
-    </p>
+    {{form.task.label}}<br /> {{form.task(id='old Title')}}<br />
+    {{form.task2.label}}<br /> {{form.task2(id='new Title')}}<br />
+    {{form.description2.label}}<br /> {{form.description2(id='Newdescription')}}
+    <br />
 
     {{form.submit}}
 </form>
+</div>
 
-
+</html>
